# cmake-template

./: CMakeLists.txt  Main.cc
